# postgresql-simple-dsl

./: .gitignore  LICENSE  default.nix  postgresql-simple-dsl.cabal
benchmarks/: Basic.hs
examples/: Basic.hs  dsl.hs  examples.cabal
src/Database/PostgreSQL/Simple/: Dsl.hs
src/Database/PostgreSQL/Simple/Dsl/: Entity.hs  Escaping.hs  Functions.hs  IntArray.hs  Internal.hs  Lens.hs  Query.hs  Rec.hs  Record.hs  Types.hs
src/Database/PostgreSQL/Simple/Dsl/Internal/: Record.hs  Types.hs
