cabal-version: 2.0
name:                postgresql-simple-dsl
version:             0.6.0.0
synopsis:            PostgreSQL EDSL built on top of postgresql-simple
-- description:
homepage:            https://github.com/sopvop/postgresql-simple-dsl
license:             BSD3
license-file:        LICENSE
author:              Leonid Onokhov
maintainer:          sopvop@gmail.com
copyright:           (c) 2013 Leonid Onokhov
category:            Database
build-type:          Simple

library
  exposed-modules:
     Database.PostgreSQL.Simple.Dsl
     Database.PostgreSQL.Simple.Dsl.Query
     Database.PostgreSQL.Simple.Dsl.Functions
     Database.PostgreSQL.Simple.Dsl.IntArray
     Database.PostgreSQL.Simple.Dsl.Internal
     Database.PostgreSQL.Simple.Dsl.Internal.Types
     Database.PostgreSQL.Simple.Dsl.Internal.Record
     Database.PostgreSQL.Simple.Dsl.Lens
     Database.PostgreSQL.Simple.Dsl.Types
     Database.PostgreSQL.Simple.Dsl.Escaping
  other-modules:
  -- other-extensions:
  build-depends: base                    >= 4.14     && < 5
               , bytestring              >= 0.10.6   && < 0.12
               , mtl                     >= 2.2.1    && < 2.3
               , postgresql-simple       >= 0.5.1.3  && < 0.8
               , text                    >= 1.2.2.1  && < 1.3
               , time                    >= 1.5.0.1  && < 1.12
               , transformers            >= 0.4.2    && < 0.6
               , unordered-containers    >= 0.2.7    && < 0.3
               , vector                  ^>= 0.12.0.3
               , vinyl

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -funbox-strict-fields -O2 -Wall -fwarn-tabs
-- -auto-all -caf-all

benchmark basic
  hs-source-dirs: benchmarks
  main-is: Basic.hs
  type: exitcode-stdio-1.0
  build-depends: base >= 4.7 && < 5
               , bytestring
               , criterion
               , postgresql-simple
               , postgresql-simple-dsl
               , unordered-containers
  default-language: Haskell2010
  ghc-options: -funbox-strict-fields -O2 -Wall -fwarn-tabs -rtsopts
-- -auto-all -caf-all
